# causal-nest-with-gRPC

./: .env.example  .gitignore  Dockerfile  Dockerfile.sillicon  IMPORTANT_NOTE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml
causal_nest/: benchmark.py  dataset.py  discovery.py  distribution.py  estimation.py  knowledge.py  problem.py  refutation.py  result.py  stats.py  utils.py
causal_nest/discovery_models/: __init__.py  bes.py  cam.py  ccdr.py  cgnn.py  discovery_method_model.py  fast_iamb.py  ges.py  gies.py  grasp.py  gs.py  iamb.py  inter_iamb.py  lingam.py  pc.py  sam.py
causal_nest/refutation_models/: __init__.py  placebo_permute.py  random_common_cause.py  refutation_method_model.py  subset_removal.py
causal_nest/results/: __init__.py  discovery_result.py  estimation_result.py  refutation_result.py
docs/: causal_nest.html  index.html  search.js
docs/causal_nest/: benchmark.html  dataset.html  discovery.html  discovery_models.html  distribution.html  estimation.html  knowledge.html  problem.html  refutation.html  refutation_models.html  result.html  results.html  stats.html  utils.html
docs/causal_nest/discovery_models/: bes.html  cam.html  ccdr.html  cgnn.html  discovery_method_model.html  fast_iamb.html  ges.html  gies.html  grasp.html  gs.html  iamb.html  inter_iamb.html  lingam.html  pc.html  sam.html
docs/causal_nest/refutation_models/: placebo_permute.html  random_common_cause.html  refutation_method_model.html  subset_removal.html
docs/causal_nest/results/: discovery_result.html  estimation_result.html  refutation_result.html
grpc/: Makefile  SIGNTATURES.md  interface.proto  interface_pb2.py  interface_pb2_grpc.py
grpc_interface/: README.md  SIGNTATURES.md  interface.proto  interface_complete.proto  interface_pb2.py  interface_pb2_grpc.py  server.py
notebooks/: abalone.ipynb  airfoil_self_noise.ipynb  algerian_forest_fires.ipynb  auto_mpg.ipynb  dry_bean.ipynb  example_sachs.ipynb  fitbit.ipynb  others.ipynb  pima_diabetes.ipynb  sachs.ipynb  student_performance.ipynb  wine_quality.ipynb  yacht_hydrodynamics.ipynb
notebooks/abalone/: abalone.ipynb  data.csv
notebooks/airfoil_self_noise/: airfoil_self_noise.ipynb
notebooks/algerian_forest_fires/: algerian_forest_fires.ipynb  data.csv
notebooks/auto_mpg/: auto_mpg.ipynb  data.csv
notebooks/fitbit/: data.csv  fitbit.ipynb
notebooks/resources/: sachs_manual_graph.dot  sachs_manual_graph_2.dot
notebooks/resources/airfoil_self_noise/: data.csv
notebooks/resources/dry_bean/: data.csv
notebooks/resources/student_performance/: data.csv
notebooks/sachs/: example_sachs.ipynb
notebooks/wine_quality/: data.csv  wine_quality.ipynb
notebooks/yacht_hydrodynamics/: data.csv  yacht_hydrodynamics.ipynb
resources/: example_knowledge.txt
tests/: test_dataset.py  test_discovery.py  test_distribution.py  test_estimation.py  test_knowledge.py  test_problem.py  test_result.py  test_stats.py  test_utils.py
tests/models/: test_cam.py  test_iamb.py
